@@ -11,22 +11,49 @@ except ImportError:
     clsmap = {}
 
 class Cache(object):
-    def __init__(self, id, starttime, **kwargs):
+    def __init__(self, id, starttime):
         self.id = id
         self.starttime = starttime
         if container is not None:
             self.context = container.ContainerContext()
-        self._containers = {}
-        self.kwargs = kwargs
-    def put(self, key, value, type='memory', **kwargs):
-        self._get_container(key, type, **kwargs).set_value(value)
-    def get(self, key, type='memory', **kwargs):
-        return self._get_container(key, type, **kwargs).get_value()
-    def _get_container(self, key, type, **kwargs):
+        self._values = {}
+        
+    def put(self, key, value, **kwargs):
+        c = self._get_container(key, **kwargs)
+        if not c:
+            raise exceptions.RuntimeException("No cache container exists for key %r" % key)
+        c.set_value(value)
+        
+    def get(self, key, **kwargs):
+        c = self._get_container(key, **kwargs)
+        if c:
+            return c.get_value()
+        else:
+            return None
+        
+    def invalidate(self, key, **kwargs):
+        c = self._get_container(key, **kwargs)
+        if c:
+            c.clear_value()
+    
+    def invalidate_body(self):
+        self.invalidate('render_body')
+    
+    def invalidate_def(self, name):
+        self.invalidate('render_%s' % name)
+        
+    def invalidate_closure(self, name):
+        self.invalidate(name)
+        
+    def _get_container(self, key, **kwargs):
         if not container:
             raise exceptions.RuntimeException("the Beaker package is required to use cache functionality.")
-        kw = self.kwargs.copy()
-        kw.update(kwargs)
         
-        return container.Value(key, self.context, self.id, clsmap[type], starttime=self.starttime, **kw)
-    
+        if kwargs:
+            type = kwargs.pop('type', 'memory')
+            self._values[key] = k = container.Value(key, self.context, self.id, clsmap[type], starttime=self.starttime, **kwargs)
+            return k
+        else:
+            return self._values.get(key, None)
+
+
